fixing the spacing on the main banner

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -143,7 +143,7 @@ h3 {
 	margin: 0 auto;
 	width: 200px;
 	height: 200px;
-	padding: 25px;
+	padding-left: 25px; padding-right: 25px; padding-bottom: 25px;
 }
 
 /* CSS for cover letter portion*/
